public/assets/css/style.css
@import	"helpers.css";
@import "utils.css";
#sidenav-overlay 
{ 
	z-index: 1; 
}
.slider .indicators .indicator-item 
{
	background-color: #666666;
	border: 3px solid #ffffff;
	-webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
	-moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}
.slider .indicators .indicator-item.active 
{
	background-color: #ffffff;
}
.slider .indicators {
	bottom: 60px;
	z-index: 2;
}
/* label color */
.input-field label 
{
	color: #ffb300;
}
/* label focus color */
.input-field input[type=text]:focus + label 
{
	color: #ffb300 !important;
}
/* label underline focus color */
.input-field input[type=text]:focus, .input-field input[type=text]:active,
.input-field input[type=email]:focus, .input-field input[type=email]:active
{
	border-bottom: 1px solid #ffb300 !important;
	box-shadow: 0 1px 0 0 #ffb300 !important;
}
/* valid color */
.input-field input[type=text].valid 
{
	border-bottom: 1px solid #ffb300;
	box-shadow: 0 1px 0 0 #ffb300;
}
/* invalid color */
.input-field input[type=text].invalid 
{
	border-bottom: 1px solid #ffb300;
	box-shadow: 0 1px 0 0 #ffb300;
}
/* icon prefix focus color */
.input-field .prefix.active 
{
	color: #ffb300;
}
.input-field textarea[class=materialize-textarea]:focus 
{
	border-bottom: 1px solid #ffb300;
	box-shadow: 0 1px 0 0 #ffb300;
}
.dropdown-content li > a, .dropdown-content li > span 
{
	color: #ffb300;
}
.fixed-height-200 
{
    max-height: 200px !important;
    min-height: 200px !important;
    object-fit: cover;
}
.fixed-height-250 
{
    max-height: 250px !important;
    min-height: 250px !important;
    object-fit: cover;
}
.transparent-bg-dark-7
{
	background-color: rgba(0, 0, 0, 0.7) !important;
}
.transparent-bg-dark-5
{
	background-color: rgba(0, 0, 0, 0.5) !important;
}
.card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) 
{
	color: #ffb300;
}
.carousel-item 
{
	background-size: cover;
	background-repeat: no-repeat;
}
.tabs .tab a
{
	color:#ffffff;
}
.tabs .tab a:hover, .tabs .tab a.active 
{
    background-color: transparent;
    color: #ffffff;
}
.tabs .tab a{
    color:#ffffff;
}
.tabs .tab a:hover,.tabs .tab a.active 
{
	background-color:transparent;
	color:#ffffff;
}
.tabs .tab.disabled a,.tabs .tab.disabled a:hover 
{
	color:rgba(102,147,153,0.7);	
}
.tabs .indicator 
{
	background-color: #ffe57f;
	height: 3px;
}
.tabs .styled-1 .tab 
{
	font-size:18px;
	font-weight: 300;
	line-height: 84px;
	height: 84px;
}
.bg-top
{
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	box-shadow:inset 0 0 0 2000px rgba(0,0,0,0.6);
}
/*Btn Float Custom Position*/
.fixed-action-btn-cp 
{
	position: relative;
	float: right;
	bottom: initial;
}
#return-to-top {
    position: fixed;
    bottom: 20px;
    right: 20px;
    background: rgb(0, 0, 0);
    background: rgba(0, 0, 0, 0.7);
    width: 50px;
    height: 50px;
    display: block;
    text-decoration: none;
    -webkit-border-radius: 35px;
    -moz-border-radius: 35px;
    border-radius: 35px;
    display: none;
    -webkit-transition: all 0.3s linear;
    -moz-transition: all 0.3s ease;
    -ms-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}
#return-to-top i {
    color: #fff;
    margin: 0;
    position: relative;
    left: 16px;
    top: 13px;
    font-size: 19px;
    -webkit-transition: all 0.3s ease;
    -moz-transition: all 0.3s ease;
    -ms-transition: all 0.3s ease;
    -o-transition: all 0.3s ease;
    transition: all 0.3s ease;
}
#return-to-top:hover {
    background: rgba(0, 0, 0, 0.9);
}
#return-to-top:hover i {
    color: #fff;
    top: 5px;
}

